# ARCAL

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
lib/: CMakeLists.txt
scripts/: udev.sh
src/: ARCAL.cpp  ARCAL.hpp  CMakeLists.txt  DCBlocker.cpp  DCBlocker.hpp  Device.cpp  Device.hpp  FFT.cpp  FFT.hpp  Waterfall.cpp  Waterfall.hpp  main.cpp
src/rtl2832/: CMakeLists.txt  rtl2832-tuner_e4000.cc  rtl2832-tuner_e4k.cc  rtl2832-tuner_fc0012.cc  rtl2832-tuner_fc0013.cc  rtl2832-tuner_r820t.cc  rtl2832.cc  rtl2832.h
